remove unnecessary guava usages