@@ -21,7 +21,6 @@
  */
 package org.drasyl.handler.remote;
 
-import com.google.common.collect.ImmutableMap;
 import io.netty.channel.ChannelHandler;
 import io.netty.channel.embedded.EmbeddedChannel;
 import io.netty.util.ReferenceCounted;
@@ -39,6 +38,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import test.util.IdentityTestUtil;
 
 import java.net.InetSocketAddress;
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.instanceOf;
@@ -51,7 +51,7 @@ class StaticRoutesHandlerTest {
     void shouldPopulateRoutesOnChannelActive(@Mock final IdentityPublicKey publicKey) {
         final InetSocketAddress address = new InetSocketAddress(22527);
 
-        final ChannelHandler handler = new StaticRoutesHandler(ImmutableMap.of(publicKey, address));
+        final ChannelHandler handler = new StaticRoutesHandler(Map.of(publicKey, address));
         final UserEventAwareEmbeddedChannel channel = new UserEventAwareEmbeddedChannel(handler);
         try {
             channel.pipeline().fireChannelActive();
@@ -66,7 +66,7 @@ class StaticRoutesHandlerTest {
     @Test
     void shouldClearRoutesOnChannelInactive(@Mock final IdentityPublicKey publicKey,
                                             @Mock final InetSocketAddress address) {
-        final ChannelHandler handler = new StaticRoutesHandler(ImmutableMap.of(publicKey, address));
+        final ChannelHandler handler = new StaticRoutesHandler(Map.of(publicKey, address));
         final UserEventAwareEmbeddedChannel channel = new UserEventAwareEmbeddedChannel(handler);
         try {
             channel.userEvents().clear();
@@ -84,7 +84,7 @@ class StaticRoutesHandlerTest {
         final InetSocketAddress address = new InetSocketAddress(22527);
         final IdentityPublicKey publicKey = IdentityTestUtil.ID_2.getIdentityPublicKey();
 
-        final ChannelHandler handler = new StaticRoutesHandler(ImmutableMap.of(publicKey, address));
+        final ChannelHandler handler = new StaticRoutesHandler(Map.of(publicKey, address));
         final EmbeddedChannel channel = new EmbeddedChannel(handler);
         try {
             channel.writeAndFlush(new OverlayAddressedMessage<>(message, publicKey));
@@ -102,7 +102,7 @@ class StaticRoutesHandlerTest {
     @Test
     void shouldPassThroughMessageWhenStaticRouteIsAbsent(@Mock final IdentityPublicKey publicKey,
                                                          @Mock(answer = RETURNS_DEEP_STUBS) final ApplicationMessage message) {
-        final ChannelHandler handler = new StaticRoutesHandler(ImmutableMap.of());
+        final ChannelHandler handler = new StaticRoutesHandler(Map.of());
         final EmbeddedChannel channel = new EmbeddedChannel(handler);
         try {
             channel.writeAndFlush(new OverlayAddressedMessage<>(message, publicKey));
